server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-server
  namespace: poc
spec:
  replicas: 3
  selector:
    matchLabels:
      run: poc-server
  # minReadySeconds: 5
  template:
    metadata:
      labels:
        run: poc-server
    spec:
     containers:
        - name: poc-server
          image: poc-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 50051

---
