istio-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-server
  namespace: poc
  labels:
    run: poc-server
spec:
  replicas: 4
  selector:
    matchLabels:
      run: poc-server
  # minReadySeconds: 5
  template:
    metadata:
      labels:
        run: poc-server
    spec:
     containers:
        - name: poc-server
          image: poc-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 50051
              name: grpc

---

apiVersion: v1
kind: Service
metadata:
  namespace: poc
  name: poc-server
  labels:
    run: poc-server
spec:
  ports:
  - port: 50051
    name: grpc
    protocol: TCP
  selector:
    run: poc-server

---
