istio-ilbgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: poc-server
  namespace: poc
spec:
  selector:
    run: poc-server
  servers:
  - hosts:
    - '*'
    port:
      name: tcp
      number: 50051
      protocol: TCP
