istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: poc-server
  namespace: poc
spec:
  gateways:
  - poc-server
  hosts:
  - poc-server
  http:
  - name: "grpc"
    route:
    - destination:
        host: poc-server
        port:
          number: 50051

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: poc-server-destination
spec:
  host: poc-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
